[package]
name = "ai_code_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.7.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
async-openai = { version = "0.29.3", features = ["byot"] }
uuid = { version = "1.0", features = ["v4"] }
